# hazel

./: .editorconfig  .gitignore  CONTRIBUTING.md  CPU-REQUIREMENTS  Cargo.toml  Gemfile  Justfile  LOG.md  README.md  bacon.toml  build  flake.nix  test  uml.out  uml.try  uml.utxt
crates/hazel/bitboard/: Cargo.toml
crates/hazel/bitboard/src/: lib.rs
crates/hazel/bitboard/src/bitboard/: creation.rs  from_into.rs  intrinsics.rs  mod.rs  shifts.rs  util.rs
crates/hazel/bitboard/src/constants/: masks.rs  move_tables.rs
crates/hazel/bitboard/src/extensions/: mod.rs
crates/hazel/bitboard/src/pextboard/: mod.rs
crates/hazel/core/: Cargo.toml
crates/hazel/core/src/: color.rs  file.rs  lib.rs  occupant.rs  piece.rs  position_metadata.rs
crates/hazel/core/src/ben/: mod.rs
crates/hazel/core/src/constants/: mod.rs  test.rs
crates/hazel/core/src/extensions/: query.rs
crates/hazel/core/src/interface/: alteration.rs  query.rs
crates/hazel/core/src/notation/: uci.rs
crates/hazel/core/src/square/: display_debug.rs  movements.rs
crates/hazel/core/src/types/: movesheet.rs
crates/hazel/core/src/zobrist/: mod.rs
crates/hazel/engine/: Cargo.toml
crates/hazel/engine/src/driver/: mod.rs  stockfish.rs
crates/hazel/engine/src/uci/: connection.rs  mod.rs
crates/hazel/generator/: Cargo.toml
crates/hazel/generator/src/: check.rs  king.rs  knight.rs  lib.rs  pawn.rs  slider.rs
crates/hazel/parser/: Cargo.toml
crates/hazel/parser/src/: lib.rs  uci.rs
crates/hazel/parser/src/pgn/: mod.rs  tokenizer.rs
crates/hazel/parser/src/san/: disambiguator.rs  mod.rs
crates/hazel/representation/: Cargo.toml
crates/hazel/representation/src/board/: mod.rs
crates/hazel/representation/src/extensions/: from_into.rs  query.rs
crates/hazel/representation/src/interface/: play.rs
crates/hazel/representation/src/types/: mod.rs  movesheet.rs
crates/hazel/ui/: Cargo.toml
crates/hazel/ui/src/: main.rs
crates/hazel/util/: Cargo.toml
crates/hazel/util/src/: charray.rs  lib.rs
crates/spell/: Cargo.toml
crates/spell/src/: lib.rs  tapelike.rs
crates/spell/src/familiar/: mod.rs
crates/witch/: Cargo.toml
crates/witch/src/: lib.rs  message_for.rs
hazel-basic/: Cargo.toml
hazel-basic/src/: castle_rights.rs  direction.rs  file.rs  lib.rs  piece.rs  position_metadata.rs
hazel-basic/src/ben/: alter.rs  compile.rs  display.rs  mod.rs  query.rs
hazel-basic/src/interface/: alteration.rs  mod.rs  query.rs
hazel-basic/src/square/: display_debug.rs  mod.rs
hazel-basic/src/zobrist/: mod.rs
hazel-bitboard/: Cargo.toml
hazel-bitboard/src/: lib.rs
hazel-bitboard/src/bitboard/: arbitrary.rs  bitops.rs  intrinsics.rs  iterator.rs  mod.rs  shifts.rs
hazel-bitboard/src/constants/: masks.rs  mod.rs
hazel-bitboard/src/extensions/: mod.rs
hazel-bitboard/src/pextboard/: nominal_attacks.rs  select_subset.rs
hazel-core/: Cargo.toml  LOG.md
hazel-core/doc/design/: tape-widget.md
hazel-core/doc/reference/: engine-interface.txt
hazel-core/src/: lib.rs
hazel-core/src/board/simple/: display_debug.rs  mod.rs
hazel-core/src/constants/: mod.rs  move_tables.rs  test.rs
hazel-core/src/coup/: mod.rs
hazel-core/src/coup/rep/: bitmangling.rs  compilation.rs  creation.rs  mod.rs  move_type.rs  tests.rs
hazel-core/src/engine/uci/: connection.rs
hazel-core/src/extensions/: mod.rs  query.rs
hazel-core/src/game/: mod.rs
hazel-core/src/game/chess/: action.rs  familiar.rs  mod.rs  position.rs  position_metadata.rs  variation.rs
hazel-core/src/interface/: alteration.rs  mod.rs  play.rs  query.rs
hazel-core/src/notation/: mod.rs
hazel-core/src/notation/ben/: from_into.rs  mod.rs
hazel-core/src/notation/pgn/: mod.rs  tokenizer.rs
hazel-core/src/notation/san/: mod.rs
hazel-core/src/notation/square/: from_into.rs  mod.rs
hazel-core/src/types/: direction.rs  mod.rs  movesheet.rs  piece.rs
hazel-core/src/types/bitboard/: creation.rs  from_into.rs  intrinsics.rs  iterator.rs
hazel-core/src/types/log/: mod.rs
hazel-core/src/types/pextboard/: mod.rs  nominal_attacks.rs
hazel-core/src/types/tape/: mod.rs  tape_direction.rs
hazel-core/src/types/zobrist/: mod.rs
hazel-core/src/ui/: mod.rs
hazel-core/src/util/: mod.rs
hazel-core/tests/fixtures/: no-variations-and-no-halt.pgn  with-nested-variations-no-halt.pgn  with-variations-no-halt.pgn
hazel-engine/: Cargo.toml
hazel-engine/src/: lib.rs
hazel-engine/src/driver/hazel/: mod.rs  response.rs
hazel-engine/src/uci/: connection.rs
hazel-generator/: Cargo.toml
hazel-generator/src/: check.rs  king.rs  knight.rs  lib.rs  pawn.rs  slider.rs
hazel-parser/: Cargo.toml
hazel-parser/src/: lib.rs  uci.rs
hazel-parser/src/ben/: mod.rs
hazel-parser/src/pgn/: mod.rs  tokenizer.rs
hazel-parser/src/pgn/parsers/: file.rs  mod.rs  square.rs
hazel-parser/src/san/: disambiguator.rs  mod.rs
hazel-ui/: Cargo.toml
hazel-ui/src/: main.rs
hazel-ui/src/brain/: mod.rs
hazel-ui/src/constants/: move_tables.rs
hazel-ui/src/coup/rep/: compilation.rs
hazel-ui/src/engine/: mod.rs
hazel-ui/src/engine/uci/: mod.rs
hazel-ui/src/notation/: uci.rs
hazel-ui/src/notation/ben/: from_into.rs  mod.rs
hazel-ui/src/types/: mod.rs  movesheet.rs  occupant.rs
hazel-ui/src/types/bitboard/: arbitrary.rs  mod.rs
hazel-ui/src/types/tape/: cursor.rs  tapelike.rs
hazel-ui/src/types/witch/: inner.rs
hazel-ui/src/ui/: app.rs  mod.rs
hazel-ui/src/ui/snapshots/: hazel_ui__ui__app__tests__renders_as_expected.snap.new
hazel-ui/src/ui/widgets/: board.rs  fen.rs  mod.rs  smallboard.rs
hazel-ui/src/util/: mod.rs
hazel-ui/tests/fixtures/: no-variations-and-halts.pgn  with-nested-variations-halts.pgn
hazel-util/: Cargo.toml
hazel-util/src/: charray.rs  lib.rs
hooks/pextboard/: Cargo.toml
hooks/pextboard/src/: main.rs
spell/: Cargo.toml
spell/src/familiar/: mod.rs
tests/: Cargo.toml  bitboard-file-conversion_test.rs  cache_test.rs  lib.rs  pieceboard-query_test.rs  zobrist_test.rs
tests/fixtures/: mod.rs  no-variations.pgn  with-variations-halts.pgn
witch/: Cargo.toml
witch/src/: lib.rs
(+442 files in other folders)
