[workspace]
resolver = "2"
members = [
    # Main libraries
    "hazel-core",
    "hazel-ui",
    "hazel-basic",
    "hazel-bitboard",
    "hazel-generator",
    "hazel-engine",

    # Extractable Libraries
    #"spell",
    "witch",

    # Small binaries that act as a profiling hook
    "hooks/pextboard",

    # Cross-crate integration tests
    #"tests/???",

    # Benchmarks
    #"benchmarks/???",

    # Quals -- verify Hazel against other known-good engines for accuracy
    #"quals/???",
]

[workspace.package]
authors = ["Joe Fredette <jfredett@gmail.com>"]
edition = "2021"
license = "AGPL v3"
repository = "https://github.com/jfredett/hazel"

[workspace.dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hazel-core = { path = "./hazel-core" }
hazel-basic = { path = "./hazel-basic" }
hazel-bitboard = { path = "./hazel-bitboard" }
hazel-ui = { path = "./hazel-ui" }
hazel-util = { path = "./hazel-util" }
hazel-generator = { path = "./hazel-generator" }
hazel-engine = { path = "./hazel-engine" }
witch = { path = "./witch" }
# Dev dependencies to share
mutants = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
similar-asserts = "1.7.0"
tracing-test = "0.2.5"

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.release]
opt-level = 3
debug = true

[profile.mutants]
inherits = "test"
debug = false
debug-assertions = false
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
