[workspace]
resolver = "2"
members = [
    # Main libraries
    "crates/hazel/core",
    "crates/hazel/ui",
    "crates/hazel/basic",
    "crates/hazel/bitboard",
    "crates/hazel/generator",
    "crates/hazel/engine",

    # Extractable Libraries
    "crates/spell",
    "crates/witch",

    # Small binaries that act as a profiling hook
    "hooks/pextboard",

    # Cross-crate integration tests
    "tests",

    # Benchmarks
    #"benchmarks/???",

    # Quals -- verify Hazel against other known-good engines for accuracy
    #"quals/???",
]

[workspace.package]
authors = ["Joe Fredette <jfredett@gmail.com>"]
edition = "2021"
license = "AGPL v3"
repository = "https://github.com/jfredett/hazel"

[workspace.dependencies]
hazel-core = { path = "./crates/hazel/core" }
hazel-basic = { path = "./crates/hazel/basic" }
hazel-bitboard = { path = "./crates/hazel/bitboard" }
hazel-ui = { path = "./crates/hazel/ui" }
hazel-util = { path = "./crates/hazel/util" }
hazel-generator = { path = "./crates/hazel/generator" }
hazel-engine = { path = "./crates/hazel/engine" }
witch = { path = "./crates/witch" }
spell = { path = "./crates/spell" }
# Main Dependencies
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# Dev dependencies to share
mutants = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
similar-asserts = "1.7.0"
tracing-test = "0.2.5"

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.release]
opt-level = 3
debug = true

[profile.mutants]
inherits = "test"
debug = false
debug-assertions = false
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
