[workspace]
resolver = "2"
members = [
    # Main libraries
    "crates/hazel/bitboard",
    "crates/hazel/core",
    "crates/hazel/engine",
    "crates/hazel/generator",
    "crates/hazel/parser",
    "crates/hazel/representation",
    "crates/hazel/ui",
    "crates/spell",
    "crates/witch",

    # Small binaries that act as a profiling hook
    "hooks/pextboard",

    # Cross-crate integration tests
    "tests",

    # Benchmarks
    #"benchmarks/???",

    # Quals -- verify Hazel against other known-good engines for accuracy
    #"quals/???",
]

[workspace.package]
authors = ["Joe Fredette <jfredett@gmail.com>"]
edition = "2021"
license = "AGPL v3"
repository = "https://github.com/jfredett/hazel"

[workspace.dependencies]
hazel-core = { path = "./crates/hazel/core" }
hazel-bitboard = { path = "./crates/hazel/bitboard" }
hazel-representation = { path = "./crates/hazel/representation" }
hazel-engine = { path = "./crates/hazel/engine" }
hazel-generator = { path = "./crates/hazel/generator" }
hazel-parser = { path = "./crates/hazel/parser" }
hazel-ui = { path = "./crates/hazel/ui" }
hazel-util = { path = "./crates/hazel/util" }
spell = { path = "./crates/spell" }
witch = { path = "./crates/witch" }
# Main Dependencies
async-trait = "0.1.87"
dynamic-array = "0.2.3"
itertools = "0.14.0"
lazy_static = "1.4.0"
nom = "7.1.3"
rand = "0.9.0"
ratatui = "0.29.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.17.0", features = ["tracing-support"] }
# Dev dependencies to share
mutants = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
insta = "1.42.2"
similar-asserts = "1.7.0"
tracing-test = "0.2.5"

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.release]
opt-level = 3
debug = true

[profile.mutants]
inherits = "test"
debug = false
debug-assertions = false
opt-level = 3

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
