[package]
name = "hazel-basic"
description = "Basic types and enums for talking about chess"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="hazel_basic"
bench = false
path="src/lib.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
quickcheck.workspace = true
hazel-util.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck_macros.workspace = true
mutants.workspace = true
similar-asserts.workspace = true
