[package]
name = "hazel-core"
version = "0.1.0"
authors = ["Joe Fredette <jfredett@gmail.com>"]
description = "Main library for Chess Engine functions"
edition = "2021"

[lib]
name="hazel"
bench = false
path="src/lib.rs"

# I might featureflag some stuff, e.g., serde and that, to reduce compile times?

[dependencies]
async-trait = "0.1.87"
dynamic-array = "0.2.3"
itertools = "0.14.0"
lazy_static = "1.4.0"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
mutants = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
similar-asserts = "1.7.0"
tracing-test = "0.2.5"
