[package]
# This will be `hazel-representation` at some point
name = "hazel-core"
version = "0.1.0"
authors = ["Joe Fredette <jfredett@gmail.com>"]
description = "Main library for Chess Engine functions"
edition = "2021"

[lib]
# this will be `hazel_representation`
name="hazel"
bench = false
path="src/lib.rs"

[dependencies]
hazel-basic.workspace = true
hazel-bitboard.workspace = true
hazel-util.workspace = true
async-trait = "0.1.87"
dynamic-array = "0.2.3"
lazy_static = "1.4.0"
nom = "7.1.3"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
# mutants.workspace = true
quickcheck_macros.workspace = true
similar-asserts.workspace = true
tracing-test.workspace = true
