[package]
name = "hazel-parser"
version = "0.1.0"
authors = ["Joe Fredette <jfredett@gmail.com>"]
description = "PGN, SAN, and UCI Parsers, amongst others"
edition = "2021"

[lib]
name="hazel_parser"
bench = false
path="src/lib.rs"


[dependencies]
nom = "7.1.3"
hazel-basic.workspace = true
hazel-core.workspace = true
hazel-bitboard.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
quickcheck.workspace = true
mutants.workspace = true
quickcheck_macros.workspace = true
similar-asserts.workspace = true
tracing-test.workspace = true
