[package]
name = "hazel-ui"
description = "UI for Hazel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name="hazel"
path="src/main.rs"

[dependencies]
hazel-core.workspace = true
async-trait = "0.1.87"
clap = { version = "2.33", features = ["yaml"]}
console-subscriber = "0.4.1"
const-str = "0.6.2"
crossbeam = "0.8.4"
dynamic-array = "0.2.3"
itertools = "0.14.0"
lazy_static = "1.4.0"
nom = "7.1.3"
owning_ref = "0.4.1"
rand = "0.8.5"
ratatui = "0.29.0"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["io"] }
tui-logger = { version = "0.15.0", features = ["tracing-support"] }
yaml-rust = "0.4.1"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
similar-asserts = "1.7.0"
criterion = "0.5.1"
criterion-macro = "0.4.0"
insta = "1.42.2"
mutants = "0.0.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tracing-test = "0.2.5"
