[package]
name = "hazel-ui"
description = "UI for Hazel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name="hazel"
path="src/main.rs"

[dependencies]
hazel-core.workspace = true
hazel-basic.workspace = true
hazel-bitboard.workspace = true
hazel-parser.workspace = true
async-trait = "0.1.87"
dynamic-array = "0.2.3"
lazy_static = "1.4.0"
nom = "7.1.3"
rand = "0.8.5"
ratatui = "0.29.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"
tui-logger = { version = "0.15.0", features = ["tracing-support"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
# similar-asserts = "1.7.0"
insta = "1.42.2"
tracing-test = "0.2.5"
