[package]
name = "hazel-util"
version = "0.1.0"
authors = ["Joe Fredette <jfredett@gmail.com>"]
description = "Utility types"
edition = "2021"

[lib]
name="hazel_util"
bench = false
path="src/lib.rs"


[dependencies]
tracing-subscriber.workspace = true
tracing.workspace = true
tokio = { version = "1.44.0", features = ["full"] }
tokio-stream = "0.1.17"

[dev-dependencies]
quickcheck.workspace = true
mutants.workspace = true
quickcheck_macros.workspace = true
similar-asserts.workspace = true
tracing-test.workspace = true
