[package]
name = "spell"
description = "An abstract type which provides facilities for writing and interpreting streams of instructions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="spell"
path="src/lib.rs"

[dependencies]
tracing.workspace = true
dynamic-array = "0.2.3"
hazel-basic.workspace = true

[dev-dependencies]
tracing-test.workspace = true
