[package]
name = "hazel-test"
version = "0.1.0"
edition = "2021"
authors = ["Joe Fredette <jfredett@gmail.com>"]
description = "Integration and Acceptance test for the Witchhazel ecosystem"
publish = false

[dependencies]


[dev-dependencies]
tracing.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true
similar-asserts.workspace = true
tracing-test.workspace = true
hazel-representation.workspace = true
hazel-core.workspace = true
hazel-bitboard.workspace = true
hazel-util.workspace = true
hazel-generator.workspace = true
hazel-engine.workspace = true
witch.workspace = true
spell.workspace = true
lazy_static.workspace = true


## TODO: Figure out how to automate this.
## Maybe just combine them into one (or a few) test crates?

[[test]]
name = "zobrist"
path = "zobrist_test.rs"

[[test]]
name = "pieceboard-query"
path = "pieceboard-query_test.rs"

[[test]]
name = "bitboard-file-conversion"
path = "bitboard-file-conversion_test.rs"
