[package]
name = "witch"
description = "A simple actor framework used by hazel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="witch"
path="src/lib.rs"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
async-trait = "0.1.87"
tracing.workspace = true

[dev-dependencies]
