[package]
name = "hazel-core"
description = "Core types and enums for talking about chess"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="hazel_core"
bench = false
path="src/lib.rs"

[dependencies]
serde.workspace = true
quickcheck.workspace = true

[dev-dependencies]
quickcheck_macros.workspace = true
mutants.workspace = true
similar-asserts.workspace = true
