[package]
name = "hazel-engine"
description = "Integration point for Hazel chess-playing subsystems"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="hazel_engine"
path="src/lib.rs"

[dependencies]
async-trait.workspace = true
tokio.workspace = true
witch.workspace = true
hazel-representation.workspace = true
hazel-basic.workspace = true
hazel-bitboard.workspace = true
hazel-parser.workspace = true
tracing.workspace = true


[dev-dependencies]
mutants.workspace = true
