[package]
name = "hazel-parser"
description = "Parsers for PGN, SAN, UCI, and others."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="hazel_parser"
path="src/lib.rs"

[dependencies]
hazel-core.workspace = true
hazel-basic.workspace = true
hazel-bitboard.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
itertools.workspace = true
nom.workspace = true

[dev-dependencies]
similar-asserts.workspace = true
tracing-test.workspace = true
