[package]
name = "hazel-util"
description = "Utility datastructures, nursery for new hazel crates"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name="hazel_util"
path="src/lib.rs"

[dependencies]
hazel-core.workspace = true
tokio-stream.workspace = true
tokio.workspace = true

[dev-dependencies]
